--- a/manifest.json
+++ b/manifest.json
@@ -5,18 +5,21 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "rgba(0,0,0,0)",
+  "theme_color": "#1a1a1a",
   "orientation": "portrait-primary",
+  "scope": "/",
   "icons": [
     {
       "src": "/images/icon.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/images/icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
