--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/images/favicon.ico",
+      "src": "/images/image.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/images/favicon.ico",
+      "src": "/images/image.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
