--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/public/images/icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
